# EndKey

./: .gitignore  .mcp.json  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  README_TESTING.md  macOS_Build.md  restart_endkey.sh
.serena/: project.yml
EndKey/: AppDelegate.swift  EndKeyApp.swift  Info.plist
EndKey.xcodeproj/: project.pbxproj
EndKeyTests/: AppStateTests.swift  EngineTests.swift
Sources/: README.md
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  PERFORMANCE_REPORT.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TESTING_DOCUMENTATION.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
engine/: ConvertTool.h  DataType.h  Engine.cpp  Engine.h  EngineBridge.cpp  EngineBridge.h  EngineCore.cpp  EngineCore.h  EngineLegacy.cpp  EngineLegacy.h  Macro.cpp  Macro.h  MacroEngine.h  MacroManager.cpp  SmartSwitchKey.cpp  SpellingEngine.cpp  SpellingEngine.h  TypingEngine.h  Vietnamese.h  VietnameseProcessor.cpp
integration_results/: engine_output.txt  engine_test  engine_test.cpp  integration_report.json  vietnamese_output.txt  vietnamese_test  vietnamese_test.cpp
logs/: memory_test  memory_test.cpp  telex_test  telex_test.cpp
tests/: CMakeLists.txt  CrossPlatformTest.cpp  IntegrationTest.cpp  MacroSystemTest.cpp  PerformanceBenchmark.cpp  README.md  TestRunner.cpp  UserAcceptanceTest.cpp  VietnameseInputTest.cpp  code_table_tests.cpp  integration_tests.cpp  macro_tests.cpp  performance_tests.cpp  regression_tests.cpp  test_main.cpp  vietnamese_input_tests.cpp
(+249 files in other folders)
